# codewenjiu.github.io

./: config.toml  flake.nix  justfile
.github/workflows/: deploy.yml
content/: _index.md
content/blog/: 2025-12-05-1.md  _index.md  how-to-build.md
public/: search_index.en.js
templates/shortcodes/: code.html
wasm/: Cargo.toml  justfile
wasm/demo/: Cargo.toml
wasm/demo/src/: lib.rs
