[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
macros = { path = "../macros" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement"
] }

egui = { workspace = true }
eframe = { workspace = true, features = [
    "default_fonts",
    "glow",
    "persistence"
]}
